--- a/backend/package.json
+++ b/backend/package.json
@@ -28,5 +28,8 @@
     "npm": "^11.6.4",
     "razorpay": "^2.9.6",
     "resend": "^6.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
