--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.967.0",
+    "@aws-sdk/s3-request-presigner": "^3.967.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^1.37.2",
     "cors": "^2.8.5",
